--- a/tree/index.html
+++ b/tree/index.html
@@ -33,8 +33,8 @@
 
 <body>
     <h1>Tree Control</h1>
-    <button onclick="sendRequest('/on')">On</button>
-    <button onclick="sendRequest('/off')">Off</button>
+    <button onclick="turnOn()">On</button>
+    <button onclick="turnOff()">Off</button>
     <br><br>
     Color <input type="text" id="colorPicker" oninput="setColor()" data-coloris>
     <br>
@@ -101,34 +101,6 @@
             updateEffectParams();
         }
 
-        function updateState() {
-            fetch('/state')
-                .then(response => response.json())
-                .then(state => {
-                    // Update display values only
-                    document.getElementById('powerState').textContent = state.on ? 'On' : 'Off';
-                    document.getElementById('brightnessState').textContent = state.brightness;
-                    document.getElementById('speedState').textContent = Math.round(state.speed * 100);
-                    document.getElementById('effectState').textContent = state.effect || 'None';
-
-                    const color = state.color;
-                    const colorHex = `rgb(${color.red}, ${color.green}, ${color.blue})`;
-                    document.getElementById('colorState').textContent = colorHex;
-                    document.getElementById('colorPreview').style.backgroundColor = colorHex;
-
-                    // Update slider positions
-                    document.getElementById('brightness').value = state.brightness;
-                    document.getElementById('speed').value = Math.round(state.speed * 100);
-
-                    // Only populate effects list if it's empty (first load)
-                    const picker = document.getElementById('effectPicker');
-                    if (!picker.options.length && state.available_effects) {
-                        populateEffects(state.available_effects);
-                    }
-                })
-                .catch(error => console.error('Error fetching state:', error));
-        }
-
         function sendRequest(endpoint, method = 'GET', body = null) {
             const options = {
                 method: method,
@@ -139,26 +111,64 @@
             }
 
             return fetch(endpoint, options)
-                .then(response => response.text())
+                .then(response => {
+                    if (method === 'POST' && endpoint === '/state') {
+                        return response.json();
+                    }
+                    return response.text();
+                })
                 .then(data => {
                     console.log(data);
-                    updateState();
+                    if (method === 'POST' && endpoint === '/state') {
+                        updateStateDisplay(data);
+                    } else {
+                        updateState();
+                    }
                 });
+        }
+
+        function updateStateDisplay(state) {
+            document.getElementById('powerState').textContent = state.on ? 'On' : 'Off';
+            document.getElementById('brightnessState').textContent = state.brightness;
+            document.getElementById('speedState').textContent = state.speed;
+            document.getElementById('effectState').textContent = state.effect || 'None';
+
+            const color = state.color;
+            const colorHex = `rgb(${color.red}, ${color.green}, ${color.blue})`;
+            document.getElementById('colorState').textContent = colorHex;
+            document.getElementById('colorPreview').style.backgroundColor = colorHex;
+
+            // Update slider positions (server uses 0-100)
+            document.getElementById('brightness').value = state.brightness;
+            document.getElementById('speed').value = state.speed;
+
+            // Only populate effects list if it's empty (first load)
+            const picker = document.getElementById('effectPicker');
+            if (!picker.options.length && state.available_effects) {
+                populateEffects(state.available_effects);
+            }
+        }
+
+        function updateState() {
+            fetch('/state')
+                .then(response => response.json())
+                .then(state => updateStateDisplay(state))
+                .catch(error => console.error('Error fetching state:', error));
         }
 
         function setColor() {
             const color = document.getElementById('colorPicker').value.substring(1);
-            sendRequest(`/color/${color}`);
+            sendRequest('/state', 'POST', { color });
         }
 
         function setBrightness() {
-            const brightness = document.getElementById('brightness').value;
-            sendRequest(`/brightness/${brightness}`);
+            const brightness = parseInt(document.getElementById('brightness').value);
+            sendRequest('/state', 'POST', { brightness });
         }
 
         function setSpeed() {
-            const speed = document.getElementById('speed').value;
-            sendRequest(`/speed/${speed}`);
+            const speed = parseInt(document.getElementById('speed').value);
+            sendRequest('/state', 'POST', { speed });
         }
 
         function setEffect() {
@@ -172,7 +182,18 @@
             }
             // Add other effect parameter collection here as needed
 
-            sendRequest(`/effect/${effect}`, 'POST', params);
+            sendRequest('/state', 'POST', {
+                effect,
+                effect_params: params
+            });
+        }
+
+        function turnOn() {
+            sendRequest('/state', 'POST', { on: true });
+        }
+
+        function turnOff() {
+            sendRequest('/state', 'POST', { on: false });
         }
 
         // Initial state update
