--- a/tree/index.html
+++ b/tree/index.html
@@ -128,18 +128,20 @@
         }
 
         function updateStateDisplay(state) {
-            document.getElementById('powerState').textContent = state.on ? 'On' : 'Off';
-            document.getElementById('brightnessState').textContent = state.brightness;
+            document.getElementById('powerState').textContent = state.state;
+            // Convert 0-255 to 0-100 for slider
+            const brightness_pct = Math.round(state.brightness / 2.55);
+            document.getElementById('brightnessState').textContent = brightness_pct;
             document.getElementById('speedState').textContent = state.speed;
             document.getElementById('effectState').textContent = state.effect || 'None';
 
             const color = state.color;
-            const colorHex = `rgb(${color.red}, ${color.green}, ${color.blue})`;
+            const colorHex = `rgb(${color.r}, ${color.g}, ${color.b})`;
             document.getElementById('colorState').textContent = colorHex;
             document.getElementById('colorPreview').style.backgroundColor = colorHex;
 
-            // Update slider positions (server uses 0-100)
-            document.getElementById('brightness').value = state.brightness;
+            // Update slider positions
+            document.getElementById('brightness').value = brightness_pct;
             document.getElementById('speed').value = state.speed;
 
             // Only populate effects list if it's empty (first load)
@@ -157,13 +159,19 @@
         }
 
         function setColor() {
-            const color = document.getElementById('colorPicker').value.substring(1);
-            sendRequest('/state', 'POST', { color });
+            const colorHex = document.getElementById('colorPicker').value;
+            // Convert hex to RGB
+            const r = parseInt(colorHex.substring(1, 3), 16);
+            const g = parseInt(colorHex.substring(3, 5), 16);
+            const b = parseInt(colorHex.substring(5, 7), 16);
+            sendRequest('/state', 'POST', { color: { r, g, b } });
         }
 
         function setBrightness() {
             const brightness = parseInt(document.getElementById('brightness').value);
-            sendRequest('/state', 'POST', { brightness });
+            // Convert 0-100 to 0-255
+            const ha_brightness = Math.round(brightness * 2.55);
+            sendRequest('/state', 'POST', { brightness: ha_brightness });
         }
 
         function setSpeed() {
@@ -189,11 +197,11 @@
         }
 
         function turnOn() {
-            sendRequest('/state', 'POST', { on: true });
+            sendRequest('/state', 'POST', { state: "ON" });
         }
 
         function turnOff() {
-            sendRequest('/state', 'POST', { on: false });
+            sendRequest('/state', 'POST', { state: "OFF" });
         }
 
         // Initial state update
