--- a/tree/index.html
+++ b/tree/index.html
@@ -51,6 +51,24 @@
     <button onclick="sendRequest('/pause')">Pause</button>
     <button onclick="sendRequest('/resume')">Resume</button>
 
+    <div id="timerControls">
+        <h3>Timer Controls</h3>
+        <div>
+            Duration (seconds): <input type="number" id="timerDuration" value="300" min="1" max="3600">
+        </div>
+        <br>
+        <button onclick="startTimer()">Start Timer</button>
+        <button onclick="pauseTimer()">Pause Timer</button>
+        <button onclick="resumeTimer()">Resume Timer</button>
+        <button onclick="cancelTimer()">Cancel Timer</button>
+        <br><br>
+        <div id="timerState">
+            <div class="state-item">Timer State: <span id="timerStateDisplay">-</span></div>
+            <div class="state-item">Time Remaining: <span id="timerRemaining">-</span>s</div>
+            <div class="state-item">Timer Duration: <span id="timerDurationDisplay">-</span>s</div>
+        </div>
+    </div>
+
     <div id="stateDisplay">
         <h3>Current State</h3>
         <div class="state-item">Power: <span id="powerState">-</span></div>
@@ -204,10 +222,44 @@
             sendRequest('/state', 'POST', { state: "OFF" });
         }
 
+        function startTimer() {
+            const duration = parseInt(document.getElementById('timerDuration').value);
+            sendRequest('/timer/start', 'POST', { duration })
+                .then(() => updateTimerState());
+        }
+
+        function pauseTimer() {
+            sendRequest('/timer/pause', 'POST')
+                .then(() => updateTimerState());
+        }
+
+        function resumeTimer() {
+            sendRequest('/timer/resume', 'POST')
+                .then(() => updateTimerState());
+        }
+
+        function cancelTimer() {
+            sendRequest('/timer/cancel', 'POST')
+                .then(() => updateTimerState());
+        }
+
+        function updateTimerState() {
+            fetch('/timer/state')
+                .then(response => response.json())
+                .then(state => {
+                    document.getElementById('timerStateDisplay').textContent = state.state;
+                    document.getElementById('timerRemaining').textContent = state.remaining;
+                    document.getElementById('timerDurationDisplay').textContent = state.duration;
+                })
+                .catch(error => console.error('Error fetching timer state:', error));
+        }
+
         // Initial state update
         updateState();
+        updateTimerState();
         // Update state every 5 seconds
         setInterval(updateState, 5000);
+        setInterval(updateTimerState, 1000);
     </script>
 </body>
 
